# turing_machines

./: .gitignore  Cargo.toml  README.md  build.rs  buildrt.sh
data/: hello.tm
src/: compiler.rs  errors.rs  interpreter.rs  lib.rs  main.rs  rt.c
tests/: hello-empty.rs
