[package]

name = "turing_machines"
version = "0.0.1"
authors = ["Jonathan Neuschäfer <j.neuschaefer@gmx.net>"]

build = "build.rs"


[[bin]]
name = "turing"
path = "src/interpreter.rs"

[[bin]]
name = "turingc"
path = "src/compiler.rs"

[lib]
name = "turing_machines"
path = "src/lib.rs"


[dependencies]
rustc-serialize = "*"
libc = "*"

[build-dependencies]
gcc = "*"
